--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <p>District Tharparkar – Sindh, Pakistan</b></p>
     </div>
     <div class="header-img">
-      <img src="logo.png" alt="Mithi Image">
+      <a href="#"><img src="logo.png" alt="Mithi Image"></a>
     </div>
   </header>
 
@@ -33,7 +33,7 @@
 
       <li><a href="#index">Home</a></li>
       <li><a href="#about">About</a></li>
-      <li><a href="#culture">Culture</a></li>
+      <li><a href="#cultures">Culture</a></li>
       <li><a href="#places">Places</a></li>
       <li><a href="#index1">Contact</a></li>
 
@@ -198,7 +198,7 @@
         <br><br>
         <div class="container"></div>
         <button class="btn btn-primary" onclick="showCulture()"><b>
-            <h3> The Culture of Thar →
+            <h3 id="cultures"> The Culture of Thar →
           </b></h3></button></a>
         <section id="culture" style="display:none;">
           <section class="culture-section" id="culture">
