Update footer links for Lutfullah Baloch

--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
 
       </div>
       <footer id="footer">
-        <p id="fonts">Designed with ❤️ By <a href="https://devbabul.vercel.app" target="_blank"> Lutfullah Baloch </a> and <a href="https://devbabul.vercel.app" target="_blank">Babul Khan</a> <br> PITP Phase(II) Batch(II)</p>
+        <p id="fonts">Designed with ❤️ By <a href="https://www.linkedin.com/in/lutf-zaman-6bbb203a1" target="_blank"> Lutfullah Baloch </a> and <a href="https://devbabul.vercel.app" target="_blank">Babul Khan</a> <br> PITP Phase(II) Batch(II)</p>
       </footer>
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
